<?xml version="1.0"?>
<package format="2">
  <name>mission_schedule</name>
  <version>1.0.0</version>
  <description>The local mission schedule package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hema@todo.todo">hema</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cti_msgs</build_depend>
  <build_depend>common</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>json</build_depend>
  <build_depend>spdlog</build_depend>
  <build_depend>save_crash_log</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>cti_msgs</build_export_depend>
  <build_export_depend>common</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>json</build_export_depend>
  <build_export_depend>spdlog</build_export_depend>
  <build_export_depend>save_crash_log</build_export_depend>
  <build_export_depend>behaviortree_cpp_v3</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cti_msgs</exec_depend>
  <exec_depend>common</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>spdlog</exec_depend>
  <exec_depend>save_crash_log</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>

  <export>
  </export>
</package>
